# Stelleri

./: .gitignore  CMakeLists.txt  CURRENTSTATE.md  README.md  TODO.md
cmake/: FindLibEdit.cmake  FindReadline.cmake
include/: AbstractTableFormatter.hpp  AddressFamily.hpp  ArpConfig.hpp  ArpToken.hpp  BlackholeToken.hpp  BridgeConfig.hpp  BridgeInterfaceConfig.hpp  BridgeMemberConfig.hpp  BridgeTableFormatter.hpp  CLI.hpp  CarpConfig.hpp  CarpTableFormatter.hpp  Client.hpp  Command.hpp  CommandGenerator.hpp  CommitToken.hpp  ConfigData.hpp  ConfigurationGenerator.hpp  ConfigurationManager.hpp  DataStore.hpp  DeleteCommand.hpp  DeleteToken.hpp  EpairInterfaceConfig.hpp  EpairTableFormatter.hpp  FilterType.hpp  GREConfig.hpp  GenerateArpCommands.hpp  GenerateCarpCommands.hpp  GenerateGifCommands.hpp  GenerateGreCommands.hpp  GenerateIpsecCommands.hpp  GenerateNdpCommands.hpp  GenerateOvpnCommands.hpp  GeneratePflogCommands.hpp  GeneratePfsyncCommands.hpp  GenerateSixToFourCommands.hpp  GenerateTapCommands.hpp  GenerateTunCommands.hpp  GenerateVxlanCommands.hpp  GenerateWireGuardCommands.hpp  (+110 more)
src/: AbstractTableFormatter.cpp  ArpToken.cpp  BlackholeToken.cpp  BridgeInterfaceConfig.cpp  BridgeTableFormatter.cpp  CLI.cpp  CarpConfig.cpp  CarpTableFormatter.cpp  ConfigurationGenerator.cpp  DeleteCommand.cpp  DeleteToken.cpp  EpairTableFormatter.cpp  Execute.cpp  ExecuteDeleteInterface.cpp  ExecuteDeleteNdp.cpp  ExecuteDeleteRoute.cpp  ExecuteDeleteVRF.cpp  ExecuteSetInterface.cpp  ExecuteSetRoute.cpp  ExecuteSetVRF.cpp  ExecuteShowInterface.cpp  ExecuteShowRoute.cpp  ExecuteShowVRF.cpp  GREConfig.cpp  GRETableFormatter.cpp  GenerateBridgeCommands.cpp  GenerateEpairCommands.cpp  GenerateGifCommands.cpp  GenerateInterfaceCommands.cpp  GenerateIpsecCommands.cpp  GenerateLaggCommands.cpp  GenerateLoopBackCommands.cpp  GenerateOvpnCommands.cpp  GenerateRouteCommands.cpp  GenerateTunCommands.cpp  GenerateTunnelCommands.cpp  GenerateVRFCommands.cpp  GenerateVlanCommands.cpp  GifConfig.cpp  GifTableFormatter.cpp  (+70 more)
src/cfg/: EpairInterfaceConfig.cpp
src/data/interface/: BridgeInterfaceConfig.cpp  EpairInterfaceConfig.cpp  GifInterfaceConfig.cpp  InterfaceConfig.cpp  IpsecInterfaceConfig.cpp  LaggInterfaceConfig.cpp  OvpnInterfaceConfig.cpp  TunInterfaceConfig.cpp  VlanInterfaceConfig.cpp  WireGuardInterfaceConfig.cpp
src/data/policy/: PolicyConfig.cpp
src/executive/: CommandDispatcher.cpp  ExecuteCommit.cpp  ExecuteDeleteInterface.cpp  ExecuteDeletePolicy.cpp  ExecuteDeleteVRF.cpp  ExecuteSetInterface.cpp  ExecuteSetPolicy.cpp  ExecuteSetVRF.cpp  ExecuteShowInterface.cpp  ExecuteShowPolicy.cpp  ExecuteShowRoute.cpp  ExecuteShowVRF.cpp  ExecuteTarget.cpp
src/formatter/: BridgeTableFormatter.cpp  CarpTableFormatter.cpp  EpairTableFormatter.cpp  GRETableFormatter.cpp  GifTableFormatter.cpp  InterfaceTableFormatter.cpp  IpsecTableFormatter.cpp  LaggTableFormatter.cpp  OvpnTableFormatter.cpp  PflogTableFormatter.cpp  PfsyncTableFormatter.cpp  PolicyTableFormatter.cpp  SingleBridgeSummaryFormatter.cpp  SingleCarpSummaryFormatter.cpp  SingleEpairSummaryFormatter.cpp  SingleGifSummaryFormatter.cpp  SingleGreSummaryFormatter.cpp  SingleInterfaceSummaryFormatter.cpp  SingleIpsecSummaryFormatter.cpp  SingleLaggSummaryFormatter.cpp  SingleOvpnSummaryFormatter.cpp  SingleTunSummaryFormatter.cpp  SingleVlanSummaryFormatter.cpp  SingleVxlanSummaryFormatter.cpp  SingleWlanSummaryFormatter.cpp  SixToFourTableFormatter.cpp  TapTableFormatter.cpp  TunTableFormatter.cpp  VLANTableFormatter.cpp  VXLANTableFormatter.cpp  WireGuardTableFormatter.cpp  WlanTableFormatter.cpp
src/generator/: ConfigurationGenerator.cpp  GenerateArpCommands.cpp  GenerateBridgeCommands.cpp  GenerateCarpCommands.cpp  GenerateEpairCommands.cpp  GenerateGifCommands.cpp  GenerateGreCommands.cpp  GenerateInterfaceCommands.cpp  GenerateIpsecCommands.cpp  GenerateLaggCommands.cpp  GenerateNdpCommands.cpp  GenerateOvpnCommands.cpp  GeneratePflogCommands.cpp  GeneratePfsyncCommands.cpp  GenerateRouteCommands.cpp  GenerateSixToFourCommands.cpp  GenerateTapCommands.cpp  GenerateTunCommands.cpp  GenerateVlanCommands.cpp  GenerateVxlanCommands.cpp  GenerateWireGuardCommands.cpp  GenerateWlanCommands.cpp
src/parser/: ArpToken.cpp  BridgeInterfaceToken.cpp  CarpInterfaceToken.cpp  CommitToken.cpp  DeleteToken.cpp  EpairInterfaceToken.cpp  GifInterfaceToken.cpp  GreInterfaceToken.cpp  InterfaceToken.cpp  IpsecInterfaceToken.cpp  LaggInterfaceToken.cpp  LoopbackInterfaceToken.cpp  NdpToken.cpp  OvpnInterfaceToken.cpp  Parser.cpp  PflogInterfaceToken.cpp  PfsyncInterfaceToken.cpp  PolicyToken.cpp  SetToken.cpp  ShowToken.cpp  SixToFourInterfaceToken.cpp  TapInterfaceToken.cpp  TargetToken.cpp  TunInterfaceToken.cpp  VRFToken.cpp  VlanInterfaceToken.cpp  VxlanInterfaceToken.cpp  WireGuardInterfaceToken.cpp  WlanInterfaceToken.cpp
src/server/: NetconfExecutor.cpp  Server.cpp  main.cpp
src/system/freebsd/: SystemArp.cpp  SystemBridges.cpp  SystemCarp.cpp  SystemEpair.cpp  SystemGif.cpp  SystemGre.cpp  SystemInterfaces.cpp  SystemIpsec.cpp  SystemLaggs.cpp  SystemNdp.cpp  SystemOvpn.cpp  SystemPflog.cpp  SystemPfsync.cpp  SystemPolicy.cpp  SystemRoutes.cpp  SystemSixToFour.cpp  SystemTap.cpp  SystemTun.cpp  SystemVlans.cpp  SystemVxlan.cpp  SystemWlan.cpp
src/system/linux/: SystemArp.cpp  SystemBridges.cpp  SystemInterfaces.cpp  SystemLaggs.cpp  SystemRoutes.cpp  SystemStubs.cpp  SystemTap.cpp  SystemTun.cpp  SystemVlans.cpp  SystemVrf.cpp  SystemVxlan.cpp  SystemWlan.cpp
src/system/netconf/: Client.cpp  NetconfArp.cpp  NetconfBridges.cpp  NetconfCarp.cpp  NetconfEpair.cpp  NetconfGif.cpp  NetconfGre.cpp  NetconfInterfaces.cpp  NetconfIpsec.cpp  NetconfLaggs.cpp  NetconfLoopBack.cpp  NetconfNdp.cpp  NetconfOvpn.cpp  NetconfPflog.cpp  NetconfPfsync.cpp  NetconfPolicy.cpp  NetconfRoutes.cpp  NetconfSixToFour.cpp  NetconfTap.cpp  NetconfTun.cpp  NetconfVlans.cpp  NetconfVxlan.cpp  NetconfWlan.cpp
